# sandart

./: Cargo.toml  README.md  critic_review.md  demo.js  design.md  handover.md  index.html  v1_plan.md  v1_research.md  v2_plan.md  vertical_design.md
.github/workflows/: deploy.yml
docs/: future_adaptive_budget_simulation.md
patterns/: spiral.thr  square.gcode
pkg/: sandart_wasm.js  sandart_wasm_bg.wasm
sandart/: Cargo.toml
sandart-pattern/: Cargo.toml
sandart-pattern/src/: lib.rs
sandart-render/: Cargo.toml
sandart-render/src/: lib.rs  shader.wgsl
sandart-sim/: Cargo.toml
sandart-sim/examples/: profile_sim.rs
sandart-sim/src/: grid.rs  lib.rs  physics.rs
sandart-wasm/: Cargo.toml
sandart-wasm/src/: lib.rs
sandart-wasm/web/: demo.js  index.html
sandart/src/: app.rs  config.rs  main.rs
src/: app.rs  config.rs  main.rs  pattern.rs  renderer.rs  shader.wgsl  sim.rs
src/sim/: grid.rs  physics.rs
