[package]
name = "sandart-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Gpu",
    "GpuAdapter",
    "GpuDevice"
] }
wgpu = { version = "23.0.0", features = ["webgl"] }
glam = "0.29.0"
sandart-sim = { path = "../sandart-sim" }
sandart-render = { path = "../sandart-render" }
sandart-pattern = { path = "../sandart-pattern" }
