[package]
name = "sandart"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.30.0"
egui-wgpu = "0.30.0"
eframe = { version = "0.30.0", features = ["wgpu"] }
wgpu = "23.0.0"
glam = "0.29.0"
bytemuck = { version = "1.19.0", features = ["derive"] }
pollster = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
rfd = "0.15"
sandart-pattern = { path = "../sandart-pattern" }
sandart-sim = { path = "../sandart-sim" }
sandart-render = { path = "../sandart-render" }

